hphp/test/slow/coeffects/cc-this-5.php.expectf
Fatal error: Type constant A::T1 does not have a 'classname' field in %s on line 10
